tests/ui/lang/core/ref/zst_member_ref_arg-broken.stderr
error: Cannot cast between pointer types
  --> $DIR/zst_member_ref_arg-broken.rs:23:5
   |
23 |     f(&s.y);
   |     ^^^^^^^
   |
   = note: from: *u32
   = note: to: *struct B {  }

error: Cannot cast between pointer types
  --> $DIR/zst_member_ref_arg-broken.rs:28:5
   |
28 |     f(&s.y);
   |     ^^^^^^^
   |
   = note: from: *struct S<usize, usize> { u32, u32 }
   = note: to: *struct B {  }

error: Cannot cast between pointer types
  --> $DIR/zst_member_ref_arg-broken.rs:33:5
   |
33 |     f(&s.y);
   |     ^^^^^^^
   |
   = note: from: *struct (usize, usize) { u32, u32 }
   = note: to: *struct B {  }

error: aborting due to 3 previous errors

